Added appointment removal function. Began adding views for add/update UI scenes.

--- a/utils/rb_fr.properties
+++ b/utils/rb_fr.properties
@@ -6,3 +6,26 @@ password_empty=Veuillez entrer un mot de passe.
 username_empty=Merci d'entrer un nom d'utilisateur.
 login_invalid=Le pseudo ou mot de passe est incorect.
 office_location=Emplacement du Bureau
+Add=Ajouter
+Delete=Effacer
+Update=Modifier
+Appointment\ ID=ID de Rendez-vous
+Title=Titre
+Description=La Description
+Location=Emplacement
+Contact=Contact
+Type=Type
+Start\ Date\ and\ TIme=Date et heure de début
+End\ Date\ and\ Time=Date et heure de fin
+Customer\ ID=N ° de client
+Search\ by\ Title\ or\ ID=Recherche par titre ou ID
+Appointment=Rendez-vous
+Appointments=Rendez-vous
+Contacts=Contacts
+Contacts=Contacts
+Logout=Déconnexion
+main_Customers=Les Clients
+No\ appointments\ were\ found=Aucun rendez-vous n'a été trouvé.
+Select\ an\ appointment\ to\ be\ deleted=Sélectionnez un rendez-vous à supprimer.
+The\ appointment\ was\ removed\ successfully=Le rendez-vous a été supprimé avec succès.
+There\ was\ an\ error\ with\ removing\ the\ selected\ appointment\ Please\ try\ again=Une erreur s'est produite lors de la suppression du rendez-vous sélectionné. Veuillez réessayer.
