--- a/utils/rb_en.properties
+++ b/utils/rb_en.properties
@@ -8,3 +8,25 @@ password_empty=Please enter a password.
 username_empty=Please enter a username.
 login_invalid=The username or password is incorrect.
 office_location=Office Location
+Appointment\ ID=Appointment ID
+Title=Title
+Description=Description
+Location=Location
+Contact=Contact
+Type=Type
+Start\ Date\ and\ TIme=Start Date and Time
+End\ Date\ and\ Time=End Date and Time
+Customer\ ID=Customer ID
+Add=Add
+Delete=Delete
+Update=Update
+Search\ by\ Title\ or\ ID=Search by Title or ID
+Appointment=Appointments
+Appointments=Appointments
+Contacts=Contacts
+Logout=Logout
+main_Customers=Customers
+No\ appointments\ were\ found=No appointments were found.
+Select\ an\ appointment\ to\ be\ deleted=Select an appointment to be deleted.
+The\ appointment\ was\ removed\ successfully=The appointment was removed successfully.
+There\ was\ an\ error\ with\ removing\ the\ selected\ appointment\ Please\ try\ again=There was an error with removing the selected appointment. Please try again.
