Began update appointment view. Added styling and language specific labels.

--- a/src/utils/rb_en.properties
+++ b/src/utils/rb_en.properties
@@ -30,3 +30,14 @@ No\ appointments\ were\ found=No appointments were found.
 Select\ an\ appointment\ to\ be\ deleted=Select an appointment to be deleted.
 The\ appointment\ was\ removed\ successfully=The appointment was removed successfully.
 There\ was\ an\ error\ with\ removing\ the\ selected\ appointment\ Please\ try\ again=There was an error with removing the selected appointment. Please try again.
+Select\ an\ appointment\ to\ be\ updated=Select an appointment to be updated.
+Please\ fill\ in\ the\ title=Please fill in the title.
+Please\ fill\ in\ the\ description=Please fill in the description.
+Please\ fill\ in\ the\ location=Please fill in the location.
+Please\ fill\ in\ the\ type=Please fill in the type.
+Please\ select\ a\ start\ date=Please select a start date.
+Please\ select\ a\ start\ time=Please select a start time.
+Please\ select\ an\ end\ date=Please select an end date.
+Please\ select\ an\ end\ time=Please select an end time.
+Please\ select\ a\ contact=Please select a contact.
+Please\ select\ a\ customer=Please select a customer.
